==> riot-ci/RIOT/cpu/esp8266/periph/i2c.c <==
#define ENABLE_DEBUG (0)
#include "debug.h"
#include <stdbool.h>
#include "cpu.h"
#include "log.h"
#include "mutex.h"
#include "periph_conf.h"
#include "periph/gpio.h"
#include "periph/i2c.h"
#include "common.h"
#include "sdk/ets.h"
#include "esp/gpio_regs.h"
#define I2C_CLOCK_STRETCH 200

int i2c_init_master(i2c_t dev, i2c_speed_t speed)
{
    if (I2C_NUMOF != sizeof(_i2c_bus)/sizeof(_i2c_bus_t)) {
        LOG_INFO("I2C_NUMOF does not match number of the I2C_SDA_x/I2C_SCL_x definitions\n");
        LOG_INFO("Please check your configuration in file board.h\n");
        assert(I2C_NUMOF < sizeof(_i2c_bus)/sizeof(_i2c_bus_t));

        return -1;
    }

    CHECK_PARAM_RET (dev < I2C_NUMOF, -1)

    if (speed == I2C_SPEED_HIGH) {
        LOG_INFO("%s I2C_SPEED_HIGH is not supported\n");
        return -2;
    }

    _i2c_bus[dev].speed   = speed;
    _i2c_bus[dev].delay   =_i2c_delays[speed][ets_get_cpu_frequency() == 80 ? 1 : 0];
    _i2c_bus[dev].scl_bit = BIT(_i2c_bus[dev].scl); /* store bit mask for faster access */
    _i2c_bus[dev].sda_bit = BIT(_i2c_bus[dev].sda); /* store bit mask for faster access */
    _i2c_bus[dev].started = false; /* for handling of repeated start condition */

    DEBUG ("%s scl=%d sda=%d speed=%d\n", __func__,
           _i2c_bus[dev].scl, _i2c_bus[dev].sda, _i2c_bus[dev].speed);

    /* configure SDA and SCL pin as GPIO in open-drain mode with enabled pull-ups */
    gpio_init (_i2c_bus[dev].scl, GPIO_OD_PU);
    gpio_init (_i2c_bus[dev].sda, GPIO_OD_PU);

    /* set SDA and SCL to be floating and pulled-up to high */
    _i2c_set_sda (&_i2c_bus[dev]);
    _i2c_set_scl (&_i2c_bus[dev]);

    return 0;
}

int /* IRAM */ i2c_read_bytes(i2c_t dev, uint8_t address, void *data, int length)
{
    DEBUG ("%s dev=%lu addr=%02x data=%p len=%d\n", __func__, dev, address, data, length);

    CHECK_PARAM_RET (dev < I2C_NUMOF, -1);
    CHECK_PARAM_RET (length > 0, 0);
    CHECK_PARAM_RET (data != NULL, 0);

    _i2c_bus_t* bus = &_i2c_bus[dev];
    int i = 0;

    /* send START condition */
    _i2c_start_cond (bus);

    /* send address byte with read flag */
    if (_i2c_write_byte (bus, (address << 1) | I2C_FLAG_READ)) {
        /* receive bytes if send address was successful */
        for ( ; i < length; i++) {
            ((uint8_t*)data)[i] = _i2c_read_byte (bus, i < length-1);
        }
    }
    /* send STOP condition */
    _i2c_stop_cond (bus);

    return i;
}

int /* IRAM */ i2c_read_regs(i2c_t dev, uint8_t address, uint8_t reg, void *data, int length)
{
    CHECK_PARAM_RET (dev < I2C_NUMOF, -1)
    CHECK_PARAM_RET (length > 0, 0)
    CHECK_PARAM_RET (data != NULL, 0);

    _i2c_bus_t* bus = &_i2c_bus[dev];

    /* send START condition */
    _i2c_start_cond (bus);

    /* send address with read flag and if successful */
    /* send register address */
    if (!_i2c_write_byte (bus, (address << 1) | I2C_FLAG_WRITE) ||
        !_i2c_write_byte (bus, reg)) {
        /* if not successful send STOP condition and return 0 */
        _i2c_stop_cond (bus);
        return 0;
    }

    /* receive data with repeated START condition if send address and register was successful */
    return i2c_read_bytes(dev, address, data, length);
}

int /* IRAM */ i2c_write_bytes(i2c_t dev, uint8_t address, const void *data, int length)
{
    DEBUG ("%s dev=%lu addr=%02x data=%p len=%d\n", __func__, dev, address, data, length);

    CHECK_PARAM_RET (dev < I2C_NUMOF, -1);
    CHECK_PARAM_RET (length > 0, 0);
    CHECK_PARAM_RET (data != NULL, 0);

    _i2c_bus_t* bus = &_i2c_bus[dev];
    int i = 0;

    /* send START condition */
    _i2c_start_cond (bus);

    /* send address with read flag */
    if (!_i2c_write_byte (bus, (address << 1) | I2C_FLAG_WRITE)) {
        length = 0;
    }

    /* send bytes if send address was successful */
    for ( ; i < length; i++) {
        if (!_i2c_write_byte (bus, ((uint8_t*)data)[i])) {
            break;
        }
    }

    /* send STOP condition */
    _i2c_stop_cond (bus);

    return i;
}

int /* IRAM */ i2c_write_regs(i2c_t dev, uint8_t address, uint8_t reg, const void *data, int length)
{
    CHECK_PARAM_RET (dev < I2C_NUMOF, -1)
    CHECK_PARAM_RET (length > 0, 0)
    CHECK_PARAM_RET (data != NULL, 0);

    _i2c_bus_t* bus = &_i2c_bus[dev];
    int i = 0;

    /* send START condition */
    _i2c_start_cond (bus);

    /* send address with read flag and if successful */
    /* send register address */
    if (!_i2c_write_byte (bus, (address << 1) | I2C_FLAG_WRITE) ||
        !_i2c_write_byte (bus, reg)) {
        length = 0;
    }

    /* send bytes if send address and register was successful */
    for ( ; i < length; i++) {
        if (!_i2c_write_byte (bus, ((uint8_t*)data)[i])) {
            break;
        }
    }

    /* send STOP condition */
    _i2c_stop_cond (bus);

    return i;
}
